re PR c++/17132 (GCC fails to eliminate function template specialization when argument deduction fails)

PR c++/17132
	* pt.c (instantiate_class_template): Increment
	processing_template_decl when substituting into a member class
	template.

	PR c++/17132
	* g++.dg/template/memclass3.C: New test.

From-SVN: r89780